# Peechu-Interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: control_flow.peechu  greeting.peechu  maths.peechu
src/: Any.cpp  Any.h  Inbuilt.h  Variable.cpp  Variable.h
src/interpreter/: Error.h  Function.cpp  Function.h  Interpreter.h  Lexer.cpp  Lexer.h  Loop.cpp  Loop.h  Parser.cpp  Parser.h  Scope.cpp  Scope.h  Token.h
src/semantics/: ControlFlow.h  Semantics.h  Tokens.h  Types.h
src/utils/: File.h  String.h  Utils.h
